style: bugfix camera-image position on safari

--- a/Userland/_scss/components/_camera.sass
+++ b/Userland/_scss/components/_camera.sass
@@ -21,9 +21,9 @@
     width: min(70vw - var(--margin-site) * 2, max(860px, 40vw))
     .cam-video
         display: block
-        width: 100%
-        position: relative
+        position: absolute
         top: 50%
+        left: 0
         width: 100%
         transform: translateY(-50%)
     .emoji-canvas
